mobile friendly css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -227,7 +227,7 @@ input[type=submit]:active {
 }
 
 .hero {
-  width: 80vh;
+  width: 80%;
 }
 
 /* ------------------------------------------------------------ */
